--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <section class="mt-4 mb-5">
   <div class="container mb-4">
-    <h1 class="font-weight-bold title text-center mb-5 animate__animated animate__bounce animate__faster">BOOTSTRAP GULP STARTER TEMPLATE</h1>
+    <h1 class="font-weight-bold title text-center mb-5 animate__animated animate__bounce animate__faster">BIGSPORTS</h1>
     <div class="jumbotron">
       <h3 class="display-4">{{ data.title }} <i class="fas fa-smile-beam"></i></h3>
       <p class="lead">{{ data.description }}</p>
