--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,6 +2,70 @@
 layout: default
 title: Home
 ---
+<div
+        id="home"
+        class="header-hero bg_cover"
+        style="background-image: url(assets/images/header/banner-bg.svg)"
+      >
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="header-hero-content text-center">
+                <h3
+                  class="header-sub-title wow fadeInUp"
+                  data-wow-duration="1.3s"
+                  data-wow-delay="0.2s"
+                >
+                  Basic - SaaS Landing Page
+                </h3>
+                <h2
+                  class="header-title wow fadeInUp"
+                  data-wow-duration="1.3s"
+                  data-wow-delay="0.5s"
+                >
+                  Kickstart Your SaaS or App Site
+                </h2>
+                <p
+                  class="text wow fadeInUp"
+                  data-wow-duration="1.3s"
+                  data-wow-delay="0.8s"
+                >
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor
+                </p>
+                <a
+                  href="javascript:void(0)"
+                  class="main-btn wow fadeInUp"
+                  data-wow-duration="1.3s"
+                  data-wow-delay="1.1s"
+                >
+                  Get Started
+                </a>
+              </div>
+              <!-- header hero content -->
+            </div>
+          </div>
+          <!-- row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div
+                class="header-hero-image text-center wow fadeIn"
+                data-wow-duration="1.3s"
+                data-wow-delay="1.4s"
+              >
+                <img src="assets/images/header/header-hero.png" alt="hero" />
+              </div>
+              <!-- header hero image -->
+            </div>
+          </div>
+          <!-- row -->
+        </div>
+        <!-- container -->
+        <div id="particles-1" class="particles"></div>
+      </div>
+      <!-- header hero -->
+    </header>
+    <!--====== HEADER PART ENDS ======-->
 <section class="mt-4 mb-5">
   <div class="container mb-4">
     <h1 class="font-weight-bold title text-center mb-5 animate__animated animate__bounce animate__faster">BIGSPORTS</h1>
@@ -11,3 +75,129 @@ title: Home
     </div>
   </div>
 </section>
+
+<!--====== SERVICES PART START ======-->
+<section id="features" class="services-area pt-120">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div class="section-title text-center pb-40">
+          <div class="line m-auto"></div>
+          <h3 class="title">
+            Clean and simple design,
+            <span> Comes with everything you need to get started!</span>
+          </h3>
+        </div>
+        <!-- section title -->
+      </div>
+    </div>
+    <!-- row -->
+    <div class="row justify-content-center">
+      <div class="col-lg-4 col-md-7 col-sm-8">
+        <div
+          class="single-services text-center mt-30 wow fadeIn"
+          data-wow-duration="1s"
+          data-wow-delay="0.2s"
+        >
+          <div class="services-icon">
+            <img
+              class="shape"
+              src="assets/images/services/services-shape.svg"
+              alt="shape"
+            />
+            <img
+              class="shape-1"
+              src="assets/images/services/services-shape-1.svg"
+              alt="shape"
+            />
+            <i class="lni lni-baloon"> </i>
+          </div>
+          <div class="services-content mt-30">
+            <h4 class="services-title">
+              <a href="javascript:void(0)">Clean</a>
+            </h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet,consetetur sadipscing elitr,
+              seddiam nonu eirmod tempor invidunt labore.
+            </p>
+            <a class="more" href="javascript:void(0)"
+              >Learn More <i class="lni lni-chevron-right"> </i>
+            </a>
+          </div>
+        </div>
+        <!-- single services -->
+      </div>
+      <div class="col-lg-4 col-md-7 col-sm-8">
+        <div
+          class="single-services text-center mt-30 wow fadeIn"
+          data-wow-duration="1s"
+          data-wow-delay="0.5s"
+        >
+          <div class="services-icon">
+            <img
+              class="shape"
+              src="assets/images/services/services-shape.svg"
+              alt="shape"
+            />
+            <img
+              class="shape-1"
+              src="assets/images/services/services-shape-2.svg"
+              alt="shape"
+            />
+            <i class="lni lni-cog"> </i>
+          </div>
+          <div class="services-content mt-30">
+            <h4 class="services-title">
+              <a href="javascript:void(0)">Robust</a>
+            </h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet,consetetur sadipscing elitr,
+              seddiam nonu eirmod tempor invidunt labore.
+            </p>
+            <a class="more" href="javascript:void(0)"
+              >Learn More <i class="lni lni-chevron-right"> </i>
+            </a>
+          </div>
+        </div>
+        <!-- single services -->
+      </div>
+      <div class="col-lg-4 col-md-7 col-sm-8">
+        <div
+          class="single-services text-center mt-30 wow fadeIn"
+          data-wow-duration="1s"
+          data-wow-delay="0.8s"
+        >
+          <div class="services-icon">
+            <img
+              class="shape"
+              src="assets/images/services/services-shape.svg"
+              alt="shape"
+            />
+            <img
+              class="shape-1"
+              src="assets/images/services/services-shape-3.svg"
+              alt="shape"
+            />
+            <i class="lni lni-bolt-alt"> </i>
+          </div>
+          <div class="services-content mt-30">
+            <h4 class="services-title">
+              <a href="javascript:void(0)">Powerful</a>
+            </h4>
+            <p class="text">
+              Lorem ipsum dolor sit amet,consetetur sadipscing elitr,
+              seddiam nonu eirmod tempor invidunt labore.
+            </p>
+            <a class="more" href="javascript:void(0)"
+              >Learn More <i class="lni lni-chevron-right"> </i>
+            </a>
+          </div>
+        </div>
+        <!-- single services -->
+      </div>
+    </div>
+    <!-- row -->
+  </div>
+  <!-- container -->
+</section>
+<!--====== SERVICES PART ENDS ======-->
